<resources>
    <string name="app_name">MedicalAppReminder-Java</string>

    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="addMedication" />
    <string name="add_med">Add medication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addMedicaton">Add Medication</string>

    <string name="do_not_have_acc">Don\'t Have Account, Sign Up.</string>

    <string name="Profiles">Profiles</string>
    <string name="add_dependent">Add dependent</string>
    <string name="MedFriends">MedFriends</string>
    <string name="verification_code">Verfication Code</string>
    <string name="home">Home</string>
    <string name="medications">Medications</string>
    <string name="more">More</string>
    <string name="med">Med</string>
    <string name="Refills">Refills</string>
    <string name="Logout">Log out</string>

    <string name="MedName">Name:</string>
    <string name="Form">Form:</string>
    <string name="pill">Pill</string>
    <string name="Solution">Solution</string>
    <string name="Injection">Injection</string>
    <string name="Powder">Powder</string>
    <string name="Drops">Drops</string>
    <string name="Inhaler">Inhaler</string>
    <string name="Other">Other</string>
    <string name="Strength">Strength</string>
    <string name="g">g</string>
    <string name="mg">mg</string>
    <string name="iu">IU</string>
    <string name="mg_g">mg_g</string>
    <string name="ml">mL</string>
    <string name="meq">mEq</string>
    <string name="mcg_ml">mcg_ml</string>
    <string name="mcg">mcg</string>
    <string name="mcg_hr">mcg_hr</string>
    <string name="mg_ml">mg_ml</string>
    <string name="mg_cm2">mg_cm2</string>
    <string name="add">add</string>
    <string name="Next">Next</string>
    <string name="what_are_you_taking_it_for">What are you taking it for?</string>
    <string name="time_reminder">Time Reminder</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date</string>
    <string name="howa_many_times_in_a_day">How many times in a day?</string>
    <string name="set_dosing_schedule">Set dosing schedule</string>
    <string name="finish">Finish</string>

    <string name="medName">Medication Name</string>
    <string name="reminders">Reminders</string>
    <string name="timesPerDay">X times per day</string>
    <string name="medType">Medication Type</string>
    <string name="medCondition">Condition</string>
    <string name="how_often_do_you_take_it">How often do you take it?</string>
    <string name="prescription">Prescription Refill</string>
    <string name="prescriptionDetails">I currently have X pills, remind me when I have X pills remaining</string>
    <string name="instruction">e.g: Before eating</string>
    <string name="instructions">Instructions</string>
    <string name="instructionDetails">e.g: Before eating</string>
    <string name="strengthValue">e.g: 3 mg</string>
    <string name="almost_done_would_you_like_to">Almost done, Would you like to:ِ</string>
    <string name="get_refill_reminders">Get Refill Reminders?</string>
    <string name="pill_s_left">Pill(s) left</string>
    <string name="should_this_be_taken_with_food">Should this be taken with food?</string>
    <string name="while_eating">While eating</string>
    <string name="After_eating">After eating</string>
    <string name="doesn_t_matter">Doesn\'t matter</string>
    <string name="any_onther_instructions">Any onther instructions?</string>
    <string name="user_name">User name</string>
    <string name="add_dose">Add Dose</string>
    <string name="suspend">Suspend</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="currentlyHave" >Currently Have</string>
    <string name="remindMe">Remind Me</string>
    <string name="pillReminder">Pill Reminders</string>

    <string-array name="ChooseDayesOfDose">
        <item>Every day</item>
        <item>Every two days</item>
        <item>Every three days</item>
        <item>Every four days</item>
        <item>Every five days</item>
        <item>Every six days</item>
    </string-array>

    <string-array name="MedTypes">
        <item>Pill</item>
        <item>Solution</item>
        <item>Injection</item>
        <item>Powder</item>
        <item>Drops</item>
        <item>Inhaler</item>
        <item>Other</item>
    </string-array>

    <string-array name="MedStrength">
        <item>g</item>
        <item>mg</item>
        <item>IU</item>
        <item>mcg</item>
        <item>mcg_ml</item>
        <item>mEq</item>
        <item>mL</item>
        <item>mg_g</item>
        <item>mg_cm2</item>
        <item>mg_ml</item>
        <item>mcg_hr</item>
    </string-array>

</resources>