<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="#F3F0F7"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AddMedicine.View.AddMedicine">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardElevation="8dp"
        android:focusable="true"
        app:cardCornerRadius="@dimen/_10sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/MedName"
                />
            <EditText
                android:id="@+id/addMedName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="@dimen/_15sdp"
                android:padding="@dimen/_10sdp"
                android:inputType="textPersonName"
                android:minHeight="@dimen/_40sdp"
                android:textSize="@dimen/_18sdp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/Form"
                />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none"
                android:paddingBottom="@dimen/_10sdp"
                >

                <RadioGroup
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/Pill"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:checked="true"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/pill"
                        />
                    <RadioButton
                        android:id="@+id/Solution"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/Solution"
                        />
                    <RadioButton
                        android:id="@+id/Injection"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/Injection"
                        />
                    <RadioButton
                        android:id="@+id/Powder"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/Powder"
                        />
                    <RadioButton
                        android:id="@+id/Drops"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/Drops"
                        />
                    <RadioButton
                        android:id="@+id/Inhaler"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/Inhaler"
                        />
                    <RadioButton
                        android:id="@+id/Other"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/Other"
                        />
                </RadioGroup>
            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/Strength"
                />
            <EditText
                android:id="@+id/StrengthAmount"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="number"
                />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none"
                android:paddingBottom="@dimen/_10sdp"
                >

                <RadioGroup
                    android:id="@+id/Strength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/g"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/g"
                        />
                    <RadioButton
                        android:id="@+id/mg"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mg"
                        />

                    <RadioButton
                        android:id="@+id/IU"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/iu"
                        />
                    <RadioButton
                        android:id="@+id/mcg"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mcg"
                        />
                    <RadioButton
                        android:id="@+id/mcg_ml"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mcg_ml"
                        />
                    <RadioButton
                        android:id="@+id/mEq"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/meq"
                        />
                    <RadioButton
                        android:id="@+id/mL"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/ml"
                        />
                    <!-- ,,,,,,-->
                    <RadioButton
                        android:id="@+id/mg_g"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mg_g"
                        />
                    <RadioButton
                        android:id="@+id/mg_cm2"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mg_cm2"
                        />
                    <RadioButton
                        android:id="@+id/mg_ml"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mg_ml"
                        />
                    <RadioButton
                        android:id="@+id/mcg_hr"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_27sdp"
                        android:background="@drawable/radio_flat_selector"
                        android:button="@android:color/transparent"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_flat_text_selector"
                        android:text="@string/mcg_hr"
                        />
                </RadioGroup>
            </HorizontalScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/nextToSecondScreen"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/Next"
        android:background="@drawable/radio_flat_selector"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateId"
        android:textAllCaps="false"

        />
</LinearLayout>