<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="#F3F0F7"
        tools:context=".AddMedicine.View.AddMedicine">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardElevation="8dp"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_10sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/what_are_you_taking_it_for"
                />

                <EditText
                    android:id="@+id/WhatYouTakingFor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:ems="10"
                    android:hint="Optional"
                    android:inputType="textLongMessage"
                    android:minHeight="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:textColorHighlight="@color/design_default_color_primary_variant"
                    android:textColorLink="@color/purple_700"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardElevation="8dp"
            android:focusable="true"
            app:cardCornerRadius="@dimen/_10sdp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="-8dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/time_reminder"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/start_date"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/startDateid"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/startDateid" />

                <EditText
                    android:id="@+id/startDateid"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:inputType="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/endDateid"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/endDateid" />

                <EditText
                    android:id="@+id/endDateid"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:inputType="none"
                    app:layout_constraintEnd_toEndOf="@+id/startDateid"
                    app:layout_constraintTop_toBottomOf="@+id/startDateid"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView

                    android:id="@+id/textView12"
                    android:layout_width="319dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/how_often_do_you_take_it"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/endDateid" />

                <TextView

                    android:id="@+id/textView10"
                    android:layout_width="319dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/howa_many_times_in_a_day"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerHowOftenYouTakeIt" />

                <EditText
                    android:id="@+id/doseTakenTime"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:hint="1-6"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/set_dosing_schedule"
                    android:layout_width="319dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/set_dosing_schedule"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/doseTakenTime" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/takeTimesforEveryDoseRecyclerview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/set_dosing_schedule" />

                <Spinner
                    android:id="@+id/spinnerHowOftenYouTakeIt"
                    android:layout_width="207dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/addMedConfirmButton"
            android:layout_width="180dp"
            android:layout_height="46dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/finish"
            android:background="@drawable/radio_flat_selector"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textAllCaps="false"

            />
    </LinearLayout>
</ScrollView>